[tool.poetry]
name = "diffusechain"
version = "0.1.6"
description = ""
authors = ["Adithya S K <adithyaskolavi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"
pillow = "^10.0.0"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
